--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Definic"></activity>
+        <activity android:name=".Inserir"></activity>
+        <activity android:name=".Outros" />
+        <activity android:name=".Definic" />
         <activity android:name=".Settings" />
         <activity android:name=".Creditos" />
         <activity android:name=".Iniciar" />
